--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -31,7 +31,7 @@ set -g status-interval 2
 set -g status-justify left
 set -g status-style bg=default,fg=default
 set -g window-status-style fg=colour8
-set -g window-status-current-style fg=white
+set -g window-status-current-style fg=default
 set -g status-right-length 200
 set -g status-right "#{prefix_highlight} #{s|$HOME|~|:pane_current_path} - %a %d %b %I:%M %p [#{battery_percentage}]"
 
