--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -57,6 +57,7 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # tmux-prefix-highlight
 set -g @prefix_highlight_bg default
+set -g @prefix_highlight_fg default
 set -g @prefix_highlight_show_copy_mode 'on'
 set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=yellow'
 set -g @prefix_highlight_prefix_prompt 'Wait'
