--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -156,7 +156,8 @@ schemes:
       foreground: "#A6ACCD"
     cursor:
       text: "#272727"
-      cursor: "#FFCC00"
+      # cursor: "#FFCC00"
+      cursor: '#EEFFFF'
     normal:
       black: "#000000"
       red: "#F07178"
@@ -201,7 +202,7 @@ schemes:
       - { index: 16, color: '#ff9e64' }
       - { index: 17, color: '#db4b4b' }
 
-colors: *tokyonight
+colors: *material
 
 # Bell
 #
