--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -176,12 +176,12 @@ schemes:
       magenta: "#C792EA"
       cyan: "#89DDFF"
       white: "#EEFFFF"
-  tokyonight: &tokyonight
+  tokyonight_night: &tokyonight_night
     primary:
       background: '#1a1b26'
       foreground: '#c0caf5'
     normal:
-      black:   '#15161E'
+      black:   '#15161e'
       red:     '#f7768e'
       green:   '#9ece6a'
       yellow:  '#e0af68'
@@ -202,7 +202,7 @@ schemes:
       - { index: 16, color: '#ff9e64' }
       - { index: 17, color: '#db4b4b' }
 
-colors: *material
+colors: *tokyonight_night
 
 # Bell
 #
