--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -246,7 +246,7 @@ schemes:
       - { index: 16, color: "#FAB387" }
       - { index: 17, color: "#F5E0DC" }
 
-colors: *catppuccin
+colors: *tokyonight_night
 
 # Bell
 #
