--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -21,7 +21,7 @@ env:
   # each instance of Alacritty. If it is not present, alacritty will
   # check the local terminfo database and use `alacritty` if it is
   # available, otherwise `xterm-256color` is used.
-  TERM: xterm-256color-italic
+  TERM: xterm-256color
 
 window:
   # Window dimensions (changes require restart)
