--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,6 @@
 # Enable true color support
-set -g default-terminal "tmux-256color-italic"
-set -ga terminal-overrides ",xterm-256color-italic:Tc"
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 bind r source-file ~/.tmux.conf
 
