--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,18 +2,20 @@
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
 
-bind r source-file ~/.tmux.conf
+set -g mouse on
 
-set -sg escape-time 0
-set -g history-limit 50000
-
-# Start windows and panes at 1
+# Start with window number 1
 set -g base-index 1
-setw -g pane-base-index 1
 set -g renumber-windows on
 
-# Enable supported focus events
+# Enable focus events tracking
 set -g focus-events on
+
+set -sg escape-time 0
+
+set -g history-limit 50000
+
+bind r source-file ~/.tmux.conf
 
 # Select windows
 bind-key -n M-1 select-window -t :1
@@ -45,9 +47,6 @@ set -g pane-active-border bg=default,fg=colour8
 bind-key b split-window -v -c "#{pane_current_path}"
 bind-key v split-window -h -c "#{pane_current_path}"
 bind-key x kill-pane
-
-# Mouse on
-set -g mouse on
 
 # Use vim key bindings in copy mode
 setw -g mode-keys vi
