--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -35,7 +35,7 @@ set -g status-style bg=default,fg=default
 set -g window-status-style fg=colour8
 set -g window-status-current-style fg=default
 set -g status-right-length 200
-set -g status-right "#{prefix_highlight} #{s|$HOME|~|:pane_current_path} - %a %d %b %I:%M %p [#{battery_percentage}]"
+set -g status-right "#{prefix_highlight} #{s|$HOME|~|:pane_current_path} - %a %d %b %H:%M [#{battery_percentage}]"
 
 # Let programs like Neovim set the terminal title
 # set -g set-titles on
